Fixed: get rid of the useless scrollbar on the subitem list

--- a/design/admin/stylesheets/pagelayout.css
+++ b/design/admin/stylesheets/pagelayout.css
@@ -1254,12 +1254,6 @@ input:-moz-placeholder {
 color:#fff;
 }
 
-#content-sub-items-list
-{
-    width:100%;
-    overflow-x:auto;
-}
-
 #dashboard-logo
 {
     float:left;
